crates/test-ui/ui/extern_methods_invalid_type.stderr
error[E0277]: the trait bound `Id<MyObject>: Encode` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method(a)]
  | |         fn a(&self) -> Id<Self>;
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `Id<MyObject>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `Id<MyObject>` to implement `EncodeReturn`
  = note: required for `Id<MyObject>` to implement `EncodeConvertReturn`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/message/mod.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
...
  |         R: EncodeConvertReturn,
  |            ^^^^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `i32: MaybeUnwrap` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method_id(b)]
  | |         fn b(&self) -> i32;
  | |     }
  | | );
  | |_^ the trait `MaybeUnwrap` is not implemented for `i32`
  |
  = help: the following other types implement trait `MaybeUnwrap`:
            Allocated<T>
            Id<T>
            Option<Allocated<T>>
            Option<Id<T>>
note: required by a bound in `send_message_id`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/mod.rs
  |
  |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<Input = U>>(
  |                                                       ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MsgSendId::send_message_id`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> ui/extern_methods_invalid_type.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method_id(init)]
  | |         fn init(&mut self) -> Option<Id<Self>>;
  | |     }
  | | );
  | | ^
  | | |
  | |_expected `Option<Allocated<_>>`, found `&mut MyObject`
  |   arguments to this function are incorrect
  |
  = note:           expected enum `Option<Allocated<_>>`
          found mutable reference `&mut MyObject`
note: associated function defined here
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/mod.rs
  |
  |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<Input = U>>(
  |               ^^^^^^^^^^^^^^^
  = note: this error originates in the macro `$crate::__rewrite_self_arg_inner` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Result<(), Id<NSObject>>: Encode` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method(error:)]
  | |         fn error(arg: i32) -> Result<(), Id<NSObject>>;
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `Result<(), Id<NSObject>>`
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *const c_void
            *mut T
            *mut c_void
            AtomicI16
            AtomicI32
          and $N others
  = note: required for `Result<(), Id<NSObject>>` to implement `EncodeReturn`
  = note: required for `Result<(), Id<NSObject>>` to implement `EncodeConvertReturn`
note: required by a bound in `send_message`
 --> $WORKSPACE/crates/objc2/src/message/mod.rs
  |
  |     unsafe fn send_message<A, R>(self, sel: Sel, args: A) -> R
  |               ------------ required by a bound in this associated function
...
  |         R: EncodeConvertReturn,
  |            ^^^^^^^^^^^^^^^^^^^ required by this bound in `MessageReceiver::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Result<Id<MyObject>, Id<NSObject>>: MaybeUnwrap` is not satisfied
 --> ui/extern_methods_invalid_type.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method_id(error:)]
  | |         fn error_id(arg: i32) -> Result<Id<Self>, Id<NSObject>>;
  | |     }
  | | );
  | |_^ the trait `MaybeUnwrap` is not implemented for `Result<Id<MyObject>, Id<NSObject>>`
  |
  = help: the following other types implement trait `MaybeUnwrap`:
            Allocated<T>
            Id<T>
            Option<Allocated<T>>
            Option<Id<T>>
note: required by a bound in `send_message_id`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/mod.rs
  |
  |     unsafe fn send_message_id<A: MessageArguments, R: MaybeUnwrap<Input = U>>(
  |                                                       ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `MsgSendId::send_message_id`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)
